--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My React App</title>
+
+        <title>Avalanche service</title>
+        <meta name="description" content="Avalanche service prediction">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css">
     </head>
     <body>
         <div id="root"></div>
